--- a/client/src/style/App.css
+++ b/client/src/style/App.css
@@ -2199,6 +2199,16 @@ body.modalActive {
 		width: 40%;
 	}
 }
+@media only screen and (max-width: 1200px) {
+	.userPetPictureContainer,
+	.petProfilePictureContainer {
+		height: 400px;
+	}
+
+	.userPet {
+		height: 650px;
+	}
+}
 
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
 	.userPetInner,
@@ -2221,6 +2231,10 @@ body.modalActive {
 	.petProfileTextBox {
 		width: 100%;
 		padding: 40px 0 0 0;
+	}
+
+	.userPet {
+		height: 650px;
 	}
 
 	.sidebar {
@@ -2296,6 +2310,7 @@ body.modalActive {
 	.petListCard {
 		padding: 50px;
 		width: 12%;
+		height: 700px;
 	}
 
 	.userPetInner,
